feat: add styles for form

--- a/conference-ticket-generator/src/index.html
+++ b/conference-ticket-generator/src/index.html
@@ -27,14 +27,17 @@
          <p class="hint-text"> <img src="./assets/images/icon-info.svg" alt="info icon"> Upload your photo (JPG or PNG, max size: 500KB).</p>
       </div>
       
-      <label for="">Full Name</label>
-      <input type="text" id="fullname">
+      <label for="">Full Name
+        <input type="text" id="fullname">
+      </label>
   
-      <label for="">Email Address</label>
-      <input type="text" placeholder="example@email.com">
-  
-      <label for="">GitHub Username</label>
-      <input type="text" placeholder="@yourusername">
+      <label for="">Email Address
+        <input type="text" placeholder="example@email.com">
+      </label>
+      
+      <label for="">GitHub Username
+        <input type="text" placeholder="@yourusername">
+      </label>
   
       <input type="submit" value="Generate My Ticket">
     </form>
