feat: add style for ticket

--- a/conference-ticket-generator/src/index.html
+++ b/conference-ticket-generator/src/index.html
@@ -10,7 +10,7 @@
 
     <img src="./assets/images/logo-full.svg" alt="Conference ticket logo" class="logo">
 
-    <h1 class="main-heading">Your Journey to Coding Conf 2025 Starts Here!</h1>
+    <!-- <h1 class="main-heading">Your Journey to Coding Conf 2025 Starts Here!</h1>
     <h2 class="sub-heading">Secure your spot at next year's biggest coding conference.</h2>
 
     <form action="">
@@ -45,7 +45,25 @@
       </label>
   
       <input type="submit" value="Generate My Ticket">
-    </form>
+    </form> -->
+
+    <h1 class="confirmation-title">Congrats, <span class="fullmane">Jonatan Kristof!</span> Your ticket is ready.</h1>
+    <p class="confirmation-details">We've emailed your ticket to <span class="emeil">jonatan@email.com</span> and will send updates in the run up to the event.</p>
+
+    <div class="ticket">
+      <img src="./assets/images/logo-mark.svg" alt="Coding Conf Logo" class="logo-mark">
+      <div class="event-info">
+        <p class="event-name">Coding Conf</p>
+        <p class="event-data">Jan 31, 2025<span>/</span>Austin, TX</p>
+      </div>
+      <div class="speaker-info">
+        <img src="./assets/images/image-avatar.jpg" alt="" class="speaker-avatar">
+        <p class="speaker-name">Jonatan Kristof</p>
+        <p class="github-nick"><img src="./assets/images/icon-github.svg" alt="GitHub Icon"> @jonatankristof0101</p>
+      </div>
+      <p class="ticket-number">#01609</p>
+    </div>
+
   </main>
 </body>
 </html>
