--- a/conference-ticket-generator/src/index.html
+++ b/conference-ticket-generator/src/index.html
@@ -9,11 +9,11 @@
   <main>
     <img src="./assets/images/logo-full.svg" alt="Conference ticket logo" class="logo">
 
-    <section class="ticket-generator">
+    <section class="ticket-form">
       <h1 class="main-heading">Your Journey to Coding Conf 2025 Starts Here!</h1>
       <h2 class="sub-heading">Secure your spot at next year's biggest coding conference.</h2>
 
-      <form novalidate>
+      <form >
         <div class="upload-img-container">
           <label for="file-load">Upload Avatar
             <div class="field">
@@ -80,8 +80,8 @@
     </section>
 
     <section class="ticket-generated hidden">
-      <h1 class="confirmation-title">Congrats, <span class="fullmane">Jonatan Kristof!</span> Your ticket is ready.</h1>
-      <p class="confirmation-details">We've emailed your ticket to <span class="emeil">jonatan@email.com</span> and will send updates in the run up to the event.</p>
+      <h1 class="confirmation-title">Congrats, <span class="fullname">Jonatan Kristof!</span> Your ticket is ready.</h1>
+      <p class="confirmation-details">We've emailed your ticket to <span class="email">jonatan@email.com</span> and will send updates in the run up to the event.</p>
   
       <div class="ticket">
         <img src="./assets/images/logo-mark.svg" alt="Coding Conf Logo" class="logo-mark">
@@ -90,9 +90,9 @@
           <p class="event-data">Jan 31, 2025<span>/</span>Austin, TX</p>
         </div>
         <div class="speaker-info">
-          <img src="./assets/images/image-avatar.jpg" alt="" class="speaker-avatar">
+          <img src="./assets/images/image-avatar.jpg" alt="Speaker Avatar" class="speaker-avatar">
           <p class="speaker-name">Jonatan Kristof</p>
-          <p class="github-nick"><img src="./assets/images/icon-github.svg" alt="GitHub Icon"> @jonatankristof0101</p>
+          <p class="github-nick"><img src="./assets/images/icon-github.svg" alt="GitHub Icon"><span class="github-nick-span">@jonatankristof0101</span></p>
         </div>
         <p class="ticket-number">#01609</p>
       </div>
